# lets-learn

./: .gitignore  .gitmodules  README.md
1_linking_libraries/: README.md  build-all.sh  clean-all.sh
1_linking_libraries/app/: Makefile  sample-app  sample-app.c
1_linking_libraries/lib/: lib-src.c
1_linking_libraries/lib/dynamic/: Makefile
1_linking_libraries/lib/inc/: lib-header.h
1_linking_libraries/lib/static/: Makefile
2_aarch64_vs_armhf/: .gitignore  CMakeLists.txt  README.md  buildall.sh  cleanall.sh  main.cpp  runall.sh
2_aarch64_vs_armhf/inc/: inc.h
2_aarch64_vs_armhf/src/: src.cpp
